--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         Error.</canvas>
         
         <script>
-        var c = document.getElementById("myCanvas");
+        var c = document.getElementById("grid");
         var line = c.getContext("2d");
         line.moveto(0,0);
         line.lineto(200,200);
